<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <TableRow>
        android:id="@+id/bingoRow1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="@string/entry1"
            android:onClick="sendMessage" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="@string/entry2"
            android:onClick="sendMessage" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="@string/entry3"
            android:onClick="sendMessage" />

    </TableRow>
    <TableRow>
        android:id="@+id/bingoRow2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="@string/entry4"
            android:onClick="sendMessage" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="@string/entry5"
            android:onClick="sendMessage" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="@string/entry6"
            android:onClick="sendMessage" />

    </TableRow>
    <TableRow>
        android:id="@+id/bingoRow3"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="@string/entry7"
            android:onClick="sendMessage" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="@string/entry8"
            android:onClick="sendMessage" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="@string/entry9"
            android:onClick="sendMessage" />

    </TableRow>




</TableLayout>
